# PandaUniEmu

./: .gitignore  BUILD_PATH.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core-nes/: Cargo.toml
crates/core-nes/src/: lib.rs  machine.rs  nrom_bus.rs  ppu.rs  ppu_timing.rs
crates/cpu-6502/: Cargo.toml
crates/cpu-6502/src/: lib.rs  singlestep_vectors.rs
crates/format-ines/: Cargo.toml
crates/format-ines/src/: lib.rs
crates/format-nestest-log/: Cargo.toml
crates/format-nestest-log/src/: lib.rs
crates/retro-cli/: Cargo.toml
crates/retro-cli/src/: lib.rs  main.rs  nestest_identity.rs
crates/retro-cli/tests/: cleanroom_process.rs
crates/retro-core/: Cargo.toml
crates/retro-core/src/: lib.rs
crates/retro-testkit/: Cargo.toml
crates/retro-testkit/src/: cleanroom_nrom.rs  lib.rs  nes_trace.rs
docs/: ARCHITECTURE.md  CPU_6502.md  NES_REFERENCE_INTAKE.md  PROJECT_STATE.md  PROPOSAL_REVIEW.md  TEST_PROVENANCE.md  UNIVERSAL_RETRO_EMULATOR_PROPOSAL.md
docs/compatibility/: CLEANROOM_NROM_PROVENANCE.md  NESTEST_PROCEDURE.md  NESTEST_PROVENANCE.md  NES_ACCEPTANCE.md  PERFECT6502_PROVENANCE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_ines.rs  parse_nestest_log.rs
tools/: check-cleanroom-nrom.py  curate-nes6502-vectors.ps1  generate-cleanroom-nrom.py  perfect6502-oracle.c  publish-github.ps1  run-fuzz.ps1  test_generate_cleanroom_nrom.py  verify-perfect6502.ps1
