[workspace]
members = [
    "crates/core-nes",
    "crates/cpu-6502",
    "crates/format-ines",
    "crates/format-nestest-log",
    "crates/retro-cli",
    "crates/retro-core",
    "crates/retro-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
