[package]
name = "retro-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
core-nes = { path = "../core-nes" }
cpu-6502 = { path = "../cpu-6502" }
format-ines = { path = "../format-ines" }
format-nestest-log = { path = "../format-nestest-log" }
retro-core = { path = "../retro-core" }

[dev-dependencies]
sha2 = { version = "0.11.0", default-features = false }

[lints]
workspace = true
